--- a/app/src/main/res/layout/activity_edit_profil.xml
+++ b/app/src/main/res/layout/activity_edit_profil.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nestedScrollView"
     tools:context="mobile.ap.rommate.EditProfilActivity"
-    android:background="@drawable/BG1">
+    android:background="@drawable/bg1">
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
