--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mobile.ap.rommate.Login"
-    android:background="@drawable/BG1">
+    android:background="@drawable/bg1">
 
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
